--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Windows 11 by Rajaniraiyn</title>
+    <title>Windows 11 by nateci</title>
     <meta name="description" content="A simple Windows 11 experience within browser.">
     <link rel="shortcut icon" href="src/icons/favicon.png" sizes="152x152">
     <link rel="apple-touch-icon" href="src/icons/favicon.png">
     <meta name="theme-color" content="#000"/>
     <link rel="manifest" href="manifest.json" />
-    <meta name="author" content="Rajaniraiyn">
+    <meta name="author" content="nateci">
     <meta name="robots" content="index, follow">
     <meta name="rating" content="safe for kids">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Windows 11 by Rajaniraiyn">
+    <meta property="og:title" content="Windows 11 by nateci">
     <meta property="og:url" content="/">
     <meta property="og:image" content="https://repository-images.githubusercontent.com/383476453/3a749fd6-31c2-41ef-99ab-3c2d8405311e">
     <meta property="og:description" content="A simple Windows 11 experience within browser.">
@@ -148,7 +148,7 @@
         <!-- does not work in google chrome if the video is not muted.
         works in firefox if autoplay permission for the site is granted.
     works even on chrome with certain criteria fulfilled:
-    For more details: 
+    For more details:
     https://developers.google.com/web/updates/2017/09/autoplay-policy-changes -->
         <audio preload="auto" width="150" height="150" id="startupAudio">
             <source src="src/sounds/Windows Startup.webm" type="audio/webm">
@@ -285,7 +285,7 @@
         <div class="others">
             <div class="user">
                 <img src="src/icons/user.png" alt="Windows 11 User icon">
-                <span>Rajaniraiyn</span>
+                <span>nateci</span>
             </div>
             <a href="src/redirects/shutdown/logoff.html"><img src="src/icons/shutdown.svg" alt="Windows 11 Shutdown icon" id="shutdown"></a>
         </div>
