--- a/src/redirects/shutdown/credits.html
+++ b/src/redirects/shutdown/credits.html
@@ -31,98 +31,25 @@
     <div class="row">
 
       <div class="card customcard" style="width: 18rem;">
-        <a align="center" style="padding: 0;" target="_blank" href="https://github.com/Rajaniraiyn/windows11/commits?author=Rajaniraiyn">
-            <img src="https://avatars.githubusercontent.com/u/72294760?v=4" class="card-img-top customcardimage" alt="Rajaniraiyn">
+        <a align="center" style="padding: 0;" target="_blank" href="https://github.com/nateci/windows11/commits?author=nateci">
+            <img src="https://avatars.githubusercontent.com/u/72294760?v=4" class="card-img-top customcardimage" alt="nateci">
         </a>
         <div class="card-body">
-          <h5 align="center" class="card-title">Rajaniraiyn</h5>
+          <h5 align="center" class="card-title">nateci</h5>
           <div class="text-center">
-            <a href="https://github.com/Rajaniraiyn/" target="_blank">
+            <a href="https://github.com/nateci/" target="_blank">
               <i style="color: black; font-size: 35px;" class="fa fa-github" aria-hidden="true"></i>
             </a>
-            <a href="https://codepen.io/rajaniraiyn" target="_blank">
-              <i style="color: black; font-size: 35px;" class="fa fa-codepen" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/rajaniraiyn" target="_blank">
+            <a href="https://www.linkedin.com/in/natecirino" target="_blank">
               <i style="color: #00b4d8; font-size: 35px;" class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="https://www.youtube.com/channel/UC0zVYp8uP657d47KxfifLYw" target="_blank">
-              <i style="color: red; font-size: 35px;" class="fa fa-youtube-play" aria-hidden="true"></i>
-            </a>
           </div>
         </div>
-      </div> 
-
-      <div class="card customcard" style="width: 18rem;">
-        <a align="center" style="padding: 0;" target="_blank" href="https://github.com/Rajaniraiyn/windows11/commits?author=ShudarsanRegmi">
-          <img src="https://avatars.githubusercontent.com/u/65646203?v=4" class="card-img-top customcardimage" alt="Shudarsan Regmi">
-        </a>
-        <div class="card-body">
-          <h5 align="center" class="card-title">Shudarsan Regmi</h5>
-          <div class="text-center">
-            <a href="#" target="_blank">
-              <i style="color: #b5179e; font-size: 35px;" class="fa fa-instagram customicons" aria-hidden="true"></i>
-            </a>
-            <a href="https://github.com/ShudarsanRegmi" target="_blank">
-              <i style="color: black; font-size: 35px;" class="fa fa-github" aria-hidden="true"></i>
-            </a>
-            <a href="#" target="_blank">
-              <i style="color: #00b4d8; font-size: 35px;" class="fa fa-telegram" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div>
-      </div> 
-
-      <div class="card customcard" style="width: 18rem;">
-        <a align="center" style="padding: 0;" target="_blank" href="https://github.com/Rajaniraiyn/windows11/commits?author=QuantumByteStudios">
-          <img src="https://avatars.githubusercontent.com/u/81068582?v=4" class="card-img-top customcardimage" alt="Quantum Byte Studios">
-        </a>
-        <div class="card-body">
-          <h5 align="center" class="card-title">Quantum Byte Studios</h5>
-          <div class="text-center">
-            <a href="https://github.com/QuantumByteStudios" target="_blank">
-              <i style="color: black; font-size: 35px;" class="fa fa-github" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.youtube.com/c/techeremhizz" target="_blank">
-              <i style="color: red; font-size: 35px;" class="fa fa-youtube-play" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.instagram.com/_harshit_raheja_/" target="_blank">
-              <i style="color: #b5179e; font-size: 35px;" class="fa fa-instagram customicons" aria-hidden="true"></i>
-            </a>
-            <a href="https://telegram.me/QuantumByteStudios" target="_blank">
-              <i style="color: #00b4d8; font-size: 35px;" class="fa fa-telegram" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div> 
       </div>
-
-      <div class="card customcard" style="width: 18rem;">
-        <a align="center" style="padding: 0;" target="_blank" href="https://github.com/Rajaniraiyn/windows11/commits?author=Kushhhh-sh">
-          <img src="https://avatars.githubusercontent.com/u/83411262?v=4" class="card-img-top customcardimage" alt="...">
-        </a>
-        <div class="card-body">
-          <h5 align="center" class="card-title">Kush Agarwal</h5>
-          <div class="text-center">
-            <a href="https://www.instagram.com/kushhhh.sh/" target="_blank">
-              <i style="color: #b5179e; font-size: 35px;" class="fa fa-instagram customicons" aria-hidden="true"></i>
-            </a>
-            <a href="https://github.com/Kushhhh-sh" target="_blank">
-              <i style="color: black; font-size: 35px;" class="fa fa-github" aria-hidden="true"></i>
-            </a>
-            <a href="https://telegram.me/kushhhh_sh" target="_blank">
-              <i style="color: #00b4d8; font-size: 35px;" class="fa fa-telegram" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div>
-      </div> 
 
     </div>
   </div>
 
-  <center>
-      <img style="width: 500px; height: 150px;" src="windows-wht.png" alt="Windows 11 Web">
-    </center>
-    
 </body>
 
 </html>
